Created animations for buttons and links

--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -68,3 +68,15 @@
   text-transform: uppercase;
   letter-spacing: 0.17rem;
 }
+
+// ===================
+// Hover and Focus on links
+// ===================
+@mixin link-hover($color) {
+  &:hover,
+  &:focus {
+    outline: none;
+    color: $color;
+    border-bottom: 2px solid $color;
+  }
+}
