--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -227,6 +227,10 @@ section.about {
   .block-1__img--container {
     max-width: 5em;
   }
+
+  .block-flex {
+    display: flex;
+  }
 }
 
 @include media-lg {
