--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -2,10 +2,13 @@
   background-color: $orange;
   padding: 1.3em 3em;
   border-radius: 0.3em;
-  box-shadow: 0px 5px 10px black;
-  box-shadow: 4px 33px 62px -13px rgba(0, 0, 0, 0.575);
   color: white;
   cursor: pointer;
+  transition: ease-in-out 0.3s;
+
+  &:hover {
+    box-shadow: 4px 33px 62px -13px rgba(0, 0, 0, 0.575);
+  }
 }
 
 .button--hero {
